# mcp-rag

./: .env  main.py  pyproject.toml  test_complete.py  test_fixed.py  test_project.py  test_simple.py  test_simple_safe.py  test_tool_usage.py
src/augmented/: Agent.py  __init__.py  chat_openai.py  mcp_client.py
src/augmented/utils/: __init__.py  info.py  pretty.py
